# Reducate_assignemnt

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
